separated memory classes into memory package